welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ( a==10 || b==10){return true}
  ^